--- a/BlockPatternAnimation/BlockPatternAnimation.csproj
+++ b/BlockPatternAnimation/BlockPatternAnimation.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+    <AvaloniaResource Remove="Assets\demoScreenCapture.gif" />
     <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
