Move versioning to Directory.Packages.props

--- a/Dialogs.Abstractions/Dialogs.Abstractions.csproj
+++ b/Dialogs.Abstractions/Dialogs.Abstractions.csproj
@@ -1,11 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
   </ItemGroup>
-
 </Project>
