--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,22 +5,22 @@
     <CentralPackageTransitivePinningEnabled>false</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Avalonia" Version="11.1.0-beta2" />
-    <PackageVersion Include="Avalonia.Desktop" Version="11.1.0-beta2" />
-    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.1.0-beta2" />
-    <PackageVersion Include="Avalonia.Themes.Simple" Version="11.1.0-beta2" />
-    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.1.0-beta2" />
-    <PackageVersion Include="Avalonia.Diagnostics" Version="11.1.0-beta2" />
-    <PackageVersion Include="Avalonia.Xaml.Behaviors" Version="11.1.0-beta2.1" />
-    <PackageVersion Include="Avalonia.Controls.TreeDataGrid" Version="11.0.2" />
+    <PackageVersion Include="Avalonia" Version="11.1.1" />
+    <PackageVersion Include="Avalonia.Desktop" Version="11.1.1" />
+    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.1.1" />
+    <PackageVersion Include="Avalonia.Themes.Simple" Version="11.1.1" />
+    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.1.1" />
+    <PackageVersion Include="Avalonia.Diagnostics" Version="11.1.1" />
+    <PackageVersion Include="Avalonia.Xaml.Behaviors" Version="11.1.0" />
+    <PackageVersion Include="Avalonia.Controls.TreeDataGrid" Version="11.0.10" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyModel" Version="8.0.1" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageVersion Include="ReactiveProperty" Version="9.5.0" />
+    <PackageVersion Include="ReactiveProperty" Version="9.6.0" />
     <PackageVersion Include="FluentAvaloniaUI" Version="2.0.5" />
     <PackageVersion Include="Jot" Version="2.1.17" />
-    <PackageVersion Include="Bogus" Version="35.5.1" />
-    <PackageVersion Include="CsvHelper" Version="32.0.1" />
+    <PackageVersion Include="Bogus" Version="35.6.0" />
+    <PackageVersion Include="CsvHelper" Version="33.0.1" />
   </ItemGroup>
 </Project>
