Update dependencies, move to SkiaSharp 3 preview

--- a/Debugging/Debugging.csproj
+++ b/Debugging/Debugging.csproj
@@ -25,5 +25,6 @@
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
