--- a/Dialogs.Todo/Dialogs.Todo.csproj
+++ b/Dialogs.Todo/Dialogs.Todo.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="FluentAvaloniaUI" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 
   <ItemGroup>
