--- a/ImageHotspot/ImageHotspot.csproj
+++ b/ImageHotspot/ImageHotspot.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
     <PackageReference Include="ReactiveProperty" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
