--- a/NoSchemaCsv.Immutable/NoSchemaCsv.Immutable.csproj
+++ b/NoSchemaCsv.Immutable/NoSchemaCsv.Immutable.csproj
@@ -22,5 +22,6 @@
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Bogus" />
     <PackageReference Include="CsvHelper" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
