--- a/SkiaBitmapAdapter/SkiaBitmapAdapter.csproj
+++ b/SkiaBitmapAdapter/SkiaBitmapAdapter.csproj
@@ -19,5 +19,6 @@
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
