--- a/TextHighlighting/TextHighlighting.csproj
+++ b/TextHighlighting/TextHighlighting.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
