--- a/BlockPatternAnimation/BlockPatternAnimation.csproj
+++ b/BlockPatternAnimation/BlockPatternAnimation.csproj
@@ -16,5 +16,6 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
     <PackageReference Include="Avalonia.Themes.Simple" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
