--- a/Dialogs.Abstractions/Dialogs.Abstractions.csproj
+++ b/Dialogs.Abstractions/Dialogs.Abstractions.csproj
@@ -5,5 +5,6 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
