--- a/SkiaRendering.ExpandingCircles/SkiaRendering.ExpandingCircles.csproj
+++ b/SkiaRendering.ExpandingCircles/SkiaRendering.ExpandingCircles.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 
   <ItemGroup>
