--- a/TextOutlineAnimation/TextOutlineAnimation.csproj
+++ b/TextOutlineAnimation/TextOutlineAnimation.csproj
@@ -16,5 +16,6 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
     <PackageReference Include="Avalonia.Themes.Fluent" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 </Project>
