--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,21 +6,21 @@
     <AvsIncludeSkiaSharp3>true</AvsIncludeSkiaSharp3>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Avalonia" Version="11.2.0" />
-    <PackageVersion Include="Avalonia.Desktop" Version="11.2.0" />
-    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.2.0" />
-    <PackageVersion Include="Avalonia.Themes.Simple" Version="11.2.0" />
-    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.2.0" />
-    <PackageVersion Include="Avalonia.Diagnostics" Version="11.2.0" />
+    <PackageVersion Include="Avalonia" Version="11.2.3" />
+    <PackageVersion Include="Avalonia.Desktop" Version="11.2.3" />
+    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.2.3" />
+    <PackageVersion Include="Avalonia.Themes.Simple" Version="11.2.3" />
+    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.2.3" />
+    <PackageVersion Include="Avalonia.Diagnostics" Version="11.2.3" />
     <PackageVersion Include="Avalonia.Xaml.Behaviors" Version="11.1.0" />
-    <PackageVersion Include="Avalonia.Controls.TreeDataGrid" Version="11.0.10" />
-    <PackageVersion Include="SkiaSharp" Version="3.118.0-preview.1.2" />
+    <PackageVersion Include="Avalonia.Controls.TreeDataGrid" Version="11.1.0" />
+    <PackageVersion Include="SkiaSharp" Version="3.116.1" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyModel" Version="9.0.0" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageVersion Include="ReactiveProperty" Version="9.6.0" />
-    <PackageVersion Include="FluentAvaloniaUI" Version="2.1.0" />
+    <PackageVersion Include="FluentAvaloniaUI" Version="2.2.0" />
     <PackageVersion Include="Jot" Version="2.1.17" />
     <PackageVersion Include="Bogus" Version="35.6.1" />
     <PackageVersion Include="CsvHelper" Version="33.0.1" />
