--- a/TransparentBrushTransitions/TransparentBrushTransitions.csproj
+++ b/TransparentBrushTransitions/TransparentBrushTransitions.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Avalonia.Themes.Fluent" />
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
+    <PackageReference Include="SkiaSharp" />
   </ItemGroup>
 
   <ItemGroup>
