--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,22 +5,22 @@
     <CentralPackageTransitivePinningEnabled>false</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Avalonia" Version="11.3.0-rc1" />
-    <PackageVersion Include="Avalonia.Desktop" Version="11.3.0-rc1" />
-    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.0-rc1" />
-    <PackageVersion Include="Avalonia.Themes.Simple" Version="11.3.0-rc1" />
-    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.0-rc1" />
-    <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.0-rc1" />
-    <PackageVersion Include="Avalonia.Xaml.Behaviors" Version="11.3.0-rc1" />
+    <PackageVersion Include="Avalonia" Version="11.3.9" />
+    <PackageVersion Include="Avalonia.Desktop" Version="11.3.9" />
+    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.9" />
+    <PackageVersion Include="Avalonia.Themes.Simple" Version="11.3.9" />
+    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.9" />
+    <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.9" />
+    <PackageVersion Include="Avalonia.Xaml.Behaviors" Version="11.3.9" />
     <PackageVersion Include="Avalonia.Controls.TreeDataGrid" Version="11.1.1" />
-    <PackageVersion Include="SkiaSharp" Version="3.118.0-preview.2.3" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyModel" Version="9.0.4" />
+    <PackageVersion Include="SkiaSharp" Version="3.119.1" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyModel" Version="10.0.0" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageVersion Include="FluentAvaloniaUI" Version="2.3.0" />
+    <PackageVersion Include="FluentAvaloniaUI" Version="2.4.1" />
     <PackageVersion Include="Jot" Version="2.1.17" />
-    <PackageVersion Include="Bogus" Version="35.6.3" />
-    <PackageVersion Include="CsvHelper" Version="33.0.1" />
+    <PackageVersion Include="Bogus" Version="35.6.5" />
+    <PackageVersion Include="CsvHelper" Version="33.1.0" />
   </ItemGroup>
 </Project>
